--- a/app/src/main/res/layout/activity_loginandsignin.xml
+++ b/app/src/main/res/layout/activity_loginandsignin.xml
@@ -7,14 +7,14 @@
     android:layout_height="match_parent">
 
     <android.support.design.widget.TabLayout
-        android:id="@+id/tab_layout_culture"
+        android:id="@+id/tab_layout_login_and_singin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabGravity="center"
         app:tabMode="fixed"/>
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/view_pager_culture"
+        android:id="@+id/view_pager_login_and_singin"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
