Add Use Validate Code To Signin

--- a/app/src/main/res/layout/fragment_signin.xml
+++ b/app/src/main/res/layout/fragment_signin.xml
@@ -27,6 +27,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/signin_user_tel"
                 android:inputType="phone"
+                android:maxLength="11"
                 android:textColorHint="@color/grey500"/>
 
         </android.support.design.widget.TextInputLayout>
