Revert "Add QQ&&Weibo Login View"
This reverts commit f8715e6404e8d4886cbf29930e9ae01ebf6fc3f3.

--- a/app/src/main/res/layout/fragment_signin.xml
+++ b/app/src/main/res/layout/fragment_signin.xml
@@ -134,7 +134,6 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:background="@color/blue500"
-        android:text="@string/common_button_signin"
-        android:enabled="false"/>
+        android:text="@string/common_button_signin"/>
 
 </RelativeLayout>
