Update Home Activity View

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="blue500">#2196f3</color>
     <color name="blue700">#1976D2</color>
     <color name="red500">#F44336</color>
+    <color name="black">#000000</color>
 </resources>
