--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="blue700">#1976D2</color>
     <color name="red500">#F44336</color>
     <color name="black">#000000</color>
+    <color name="yellow500">#FF9800</color>
 </resources>
