Update Diary Item View

--- a/app/src/main/res/layout/item_diary_recyclerview.xml
+++ b/app/src/main/res/layout/item_diary_recyclerview.xml
@@ -7,6 +7,7 @@
     android:layout_height="wrap_content"
     android:foreground="?attr/selectableItemBackground"
     android:clickable="true"
+    android:layout_marginTop="6dp"
     app:cardCornerRadius="3dp"
     app:cardElevation="8dp">
     
